# django-graphql-starterkit

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
config/: asgi.py  root_schema.py  settings.py  urls.py
sub_django/: admin.py  apps.py  models.py  schema.py  subscription.py  types.py
sub_django/migrations/: 0001_initial.py
